fixed some visibility issues

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -234,6 +234,7 @@ p{
   clear: left;
   font-size: 30px;
   font-weight: bold;
+  color: yellow;
 }
 #catagoryName{
   clear: left;
